--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ const kodeMapping = {
   "A09008": "soal2.json",
   "SAREWAE": "test.json",
   "W11765": "soal3.json",
-  "urinara": "soal5.json"
+  "H77777": "soal5.json"
 };
 
 const BASE = "https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
@@ -424,5 +424,6 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html>
+
 
 
