--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@ const kodeMapping = {
   "a09008": "soal2.json",
   "sarewae": "test.json",
   "w11765": "soal3.json",
-  "h77777": "soal5.json",
-  "urinara": "soal_urinara.json"  // Contoh tambah kode baru (ganti file json-nya nanti)
+  "urinara": "soal5.json",
+  "cincay": "soal_urinara.json"  // Contoh tambah kode baru (ganti file json-nya nanti)
 };
 
 const BASE = "https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
@@ -429,3 +429,4 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html>
+
