--- a/index.html
+++ b/index.html
@@ -402,20 +402,21 @@ document.addEventListener("DOMContentLoaded", () => {
       keterangan: html ? html.replace(/<[^>]+>/g, ' ').trim() : "Semua benar! Perfect!"
     };
 
-    // FIX: Pakai GET query string (body nggak hilang pas redirect GAS)
-    const params = new URLSearchParams(dataToSend);
-    const url = SPREADSHEET_URL + "?" + params.toString() + "&_=" + Date.now();
+    const formData = new URLSearchParams(dataToSend);
 
-    fetch(url, {
-      method: "GET",
+    fetch(SPREADSHEET_URL, {
+      method: "POST",
       mode: "no-cors",
+      keepalive: true,
+      body: formData,
       redirect: "follow"
     })
     .then(() => {
-      console.log("Submit sukses via GET query string");
+      console.log("✅ Skor dikirim sukses via POST (no-cors)");
     })
     .catch(err => {
-      console.error("Gagal submit GET:", err);
+      console.error("Gagal POST:", err);
+      // Tidak ada fallback GET lagi → nggak double Anonymous
     });
 
     resultBox.innerHTML = `
@@ -434,4 +435,3 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html>
-
