--- a/index.html
+++ b/index.html
@@ -284,6 +284,8 @@ const validCredentials = [
   {username: "Zhafif07", password: "20060722"},
   {username: "admin", password: "admin123"},
   {username: "koreafan", password: "hanguk789"},
+  {username:"Satria11",password:"Satria113"},
+  {username:"sultan2026",password:"sultandaulah"},
   {username: "topik2026", password: "seoul2026"}
 ];
 
@@ -435,3 +437,4 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html>
+
