--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 const SPREADSHEET_URL = "https://script.google.com/macros/s/AKfycbxapcWi7Oegep2wwVADsdJLI8Fyumg30U-9hPpG88qtpVgIduEbwo6LYslkbEcpfqwewg/exec";
 const validCredentials = [
   {username: "Heri", password: "heri99"},
+  {username: "uus", password: "111"},
   {username: "hanarizka", password: "Nungkihana24!"},
   // ... (semua credentials lu yang lain, gue singkat aja)
   {username: "topik2026", password: "seoul2026"}
@@ -252,3 +253,4 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html>
+
